# fs-managers

./: CLAUDE.md  Cargo.toml  README.md  deny.toml  package.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
ai/: Cargo.toml  package.toml
ai/src/: lib.rs
auth/: Cargo.toml
auth/src/: app_config.rs  config.rs  error.rs  lib.rs  oidc.rs  pod.rs  view.rs  wizard.rs
bots/: Cargo.toml  package.toml
bots/src/: audit.rs  bus.rs  config.rs  db.rs  dispatcher.rs  lib.rs  main.rs  runtime.rs  secrets.rs  trigger.rs  webhook.rs
bots/src/commands/: mod.rs  ping.rs  status.rs
container/: Cargo.toml  package.toml
container/src/: lib.rs  view.rs
container_app/: Cargo.toml
container_app/src/: lib.rs
core/: Cargo.toml
core/src/: category.rs  container_controller.rs  error.rs  lib.rs  service.rs  systemd_controller.rs
cursor/: Cargo.toml  package.toml
cursor/src/: active.rs  lib.rs  list.rs  preview.rs  view.rs
forgejo/: Cargo.toml
forgejo/src/: adapter.rs  config.rs  error.rs  keys.rs  lib.rs  service_controller.rs  view.rs  wizard.rs
icons/: Cargo.toml  package.toml
icons/src/: lib.rs  view.rs
language/: Cargo.toml  package.toml
language/src/: active.rs  download.rs  git.rs  git_contributor.rs  lib.rs  list.rs  preview.rs  view.rs
language/tests/: language_test.rs
mail/: Cargo.toml
mail/src/: app_config.rs  config.rs  error.rs  lib.rs  pod.rs  view.rs  wizard.rs
matrix/: Cargo.toml
matrix/src/: app_config.rs  config.rs  error.rs  lib.rs  view.rs  wizard.rs
telegram/: Cargo.toml
telegram/src/: lib.rs  main.rs  view.rs  wizard.rs  wizard_cli.rs
theme/: Cargo.toml  package.toml
theme/src/: lib.rs  view.rs
theme/tests/: inventory_integration.rs
wiki/: Cargo.toml
wiki/src/: config.rs  error.rs  keys.rs  lib.rs  provider.rs  service_controller.rs  view.rs  wizard.rs
zentinel/: Cargo.toml
zentinel/src/: bus_handler.rs  error.rs  lib.rs  manager.rs  route.rs  service_controller.rs  view.rs
