[package]
name        = "fs-manager-auth"
description = "FreeSynergy Auth Manager — Kanidm setup wizard + IAM configuration"
version     = "0.1.0"
edition     = "2021"
license     = "MIT"

[lib]
name = "fs_manager_auth"
path = "src/lib.rs"

[dependencies]
fs-core          = { path = "../../fs-libs/fs-core" }
fs-i18n          = { path = "../../fs-i18n" }
fs-render        = { path = "../../fs-render" }
fs-manager-core  = { path = "../core" }
fs-pod-forge     = { path = "../../fs-pod-forge" }
fs-app-forge     = { path = "../../fs-app-forge" }
thiserror        = "2"
serde            = { version = "1", features = ["derive"] }
tokio            = { version = "1", features = ["full"] }
async-trait      = "0.1"

[dependencies.reqwest]
version          = "0.12"
features         = ["json", "rustls-tls"]
default-features = false
