[package]
name        = "fsn-manager-bots"
description = "FreeSynergy Bot Manager — CLI for managing bot instances and modules"
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
authors     = ["FreeSynergy.Net"]

[[bin]]
name = "fsn-bot"
path = "src/main.rs"

[dependencies]
# Database
sqlx  = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
tokio = { version = "1",   features = ["full"] }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"

# Error handling
anyhow = "1"

# HTTP (Bus client)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Utilities
chrono  = { version = "0.4", features = ["serde"] }
