[package]
name        = "fs-manager-bots"
description = "FreeSynergy Bot Manager — CLI for managing bot instances and modules"
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
authors     = ["FreeSynergy.Net"]

[[bin]]
name = "fs-bot"
path = "src/main.rs"

[dependencies]
# Database (via internal FSN abstraction — no direct sqlx/sea-orm deps)
fs-db  = { path = "../../fs-db", features = ["sqlite"] }
tokio  = { version = "1", features = ["full"] }

# Serialization
serde_json = "1"

# Error handling
anyhow = "1"

# HTTP (Bus client)
reqwest = { version = "0.13", features = ["json"], default-features = false }
