[package]
name        = "fs-manager-core"
description = "FreeSynergy Manager Core — ServiceController + CategoryManager traits shared by all managers"
version     = "0.1.0"
edition     = "2021"
license     = "MIT"

[lib]
name = "fs_manager_core"
path = "src/lib.rs"

[dependencies]
fs-core      = { path = "../../fs-libs/fs-core" }
fs-i18n      = { path = "../../fs-i18n" }
thiserror    = "2"
serde        = { version = "1", features = ["derive"] }
tokio        = { version = "1", features = ["full", "process"] }
async-trait  = "0.1"
