[package]
name = "fs-manager-cursor"
version = "0.1.0"
edition = "2021"
description = "FreeSynergy Cursor Manager — manages mouse pointer sets, provides creation and activation"

[lib]
name = "fs_manager_cursor"
path = "src/lib.rs"

[dependencies]
fs-core   = { path = "../../fs-libs/fs-core" }
fs-i18n   = { path = "../../fs-i18n" }
fs-render = { path = "../../fs-render" }
