[package]
name = "fs-manager-icons"
version = "0.1.0"
edition = "2021"
description = "FreeSynergy Icon Manager — knows available icon sets, provides icon picker component"

[lib]
name = "fs_manager_icons"
path = "src/lib.rs"

[dependencies]
fs-core   = { path = "../../fs-libs/fs-core" }
fs-i18n   = { path = "../../fs-i18n" }
fs-render = { path = "../../fs-render" }
