[package]
name = "fs-manager-language"
version = "0.1.0"
edition = "2021"
description = "FreeSynergy Language Manager — locale settings (Store default + Inventory override), SSH contributor check"

[lib]
name = "fs_manager_language"
path = "src/lib.rs"

[dependencies]
fs-core = { path = "../../fs-libs/fs-core" }
fs-i18n = { path = "../../fs-i18n" }
serde = { version = "1", features = ["derive"] }
toml  = "1"
gix   = { version = "0.80", default-features = false, features = ["blocking-http-transport-reqwest-rust-tls", "worktree-mutation", "blocking-network-client"] }
