[package]
name = "fs-manager-theme"
version = "0.1.0"
edition = "2021"
description = "FreeSynergy Theme Manager — reads/writes the active theme, provides UI picker component"

[lib]
name = "fs_manager_theme"
path = "src/lib.rs"

[dependencies]
fs-core      = { path = "../../fs-libs/fs-core" }
fs-inventory = { path = "../../fs-inventory" }
fs-types     = { path = "../../fs-libs/fs-types" }
tokio        = { version = "1", features = ["full"] }
chrono       = { version = "0.4", features = ["serde"] }

[dev-dependencies]
fs-db = { path = "../../fs-db" }
tokio = { version = "1", features = ["full"] }
